--- a/contactus_aboutus/contactus.html
+++ b/contactus_aboutus/contactus.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -176,7 +174,7 @@
 <div class="fadeIn">		
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form action="contactus.php" method="post" class="contact100-form validate-form">
+			<form action="contactus.php" method="POST" class="contact100-form validate-form">
 				<span class="contact100-form-title">
 					Ping Us!
 				</span>
@@ -193,7 +191,7 @@
 
 				<label class="label-input100" for="email">Enter your email</label>
 				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: example@email.com">
-					<input id="email" class="input100" type="text" name="senderEmail" placeholder="Eg. example@email.com" required>
+					<input id="email" class="input100" type="email" name="senderEmail" placeholder="Eg. example@email.com" required>
 					<span class="focus-input100"></span>
 				</div>
 
@@ -210,7 +208,7 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button  class="btn btn-primary d-inline-flex flex-row" type="submit" name="submit">
+					<button  class="btn btn-primary d-inline-flex flex-row submit" type="submit" name="submit">
 						<i class="fa fa-paper-plane"></i>Send Message
 					</button>
 				</div>
@@ -244,7 +242,8 @@
 						</span>
 
 						<span class="txt3">
-							+91 9988776655
+							<a href="tel:+917506699134">
+							+91 7506699134</a>
 						</span>
 					</div>
 				</div>
