--- a/contactus_aboutus/contactus.html
+++ b/contactus_aboutus/contactus.html
@@ -103,6 +103,14 @@
   
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 			  <ul class="navbar-nav ml-auto">
+			  <li class="nav-item">
+                <a
+                  class="nav-link page-scroll d-flex flex-row align-items-center text-primary"
+                  href="../landing_page/loading.php"
+                >
+                  Home
+                </a>
+              </li>
 				<li class="nav-item">
 				  <a
 					class="nav-link page-scroll d-flex flex-row align-items-center text-primary"
